# backend/openapi.yml
@@ -16,6 +16,12 @@ paths:
       responses:
         '200':
           description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GetTodoDto'
       tags: &ref_0
         - Todo
     post:
@@ -28,8 +34,12 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateTodoDto'
       responses:
-        '201':
+        '200':
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateTodoDto'
       tags: *ref_0
     put:
       operationId: TodoController_putTodo
@@ -43,6 +53,10 @@ paths:
       responses:
         '200':
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateTodoDto'
       tags: *ref_0
     delete:
       operationId: TodoController_deleteTodo
@@ -56,16 +70,44 @@ paths:
       responses:
         '200':
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteTodoDto'
       tags: *ref_0
 info:
-  title: ''
-  description: ''
-  version: 1.0.0
+  title: Example
+  description: The cats API description
+  version: '1.0'
   contact: {}
 tags: []
 servers: []
 components:
   schemas:
+    GetTodoDto:
+      type: object
+      properties:
+        id:
+          type: string
+        complete:
+          type: boolean
+        title:
+          type: string
+        comment:
+          type: string
+        createdAt:
+          format: date-time
+          type: string
+        updatedAt:
+          format: date-time
+          type: string
+      required:
+        - id
+        - complete
+        - title
+        - comment
+        - createdAt
+        - updatedAt
     CreateTodoDto:
       type: object
       properties:
